# soul_school

./: .env.tmp  .gitignore  README.md  docker-compose.yml  docker-compose_2.yml  docker-compose_old.yml  nginx.conf
back_end/: .gitignore  Dockerfile  Dockerfile_old  README.md  entrypoint.sh  pyproject.toml
back_end/auth_custom/: serializers.py  urls.py
back_end/back_end/: settings.py  urls.py
back_end/courses/: models.py  urls.py  views.py
back_end/courses/migrations/: 0001_initial.py
back_end/lessons/: admin.py  models.py  serializers.py  urls.py  views.py
back_end/lessons/migrations/: 0001_initial.py  0002_alter_lessonaccess_viewed_time_alter_product_owner.py  0003_alter_lessonaccess_viewed_time.py  0004_alter_lessonaccess_viewed_time.py  0005_lessonaccess_last_viewed_date.py  0006_alter_lessonaccess_last_viewed_date.py  0007_create_some_fixtures.py
docker/back_end/: Dockerfile  wsgi-entrypoint.sh
docker/nginx/: Dockerfile
docker/nginx/development/: default.conf
front_end/: Dockerfile  README.md  package-lock.json
front_end/src/: App.css  App.js  index.css  styles.css
front_end/src/components/: Lessons.js  Login.js  ProtectedRoute.js
front_end/src/contexts/: AuthContext.js
web_server/: Dockerfile  default.conf  nginx_old.conf
